--- a/style.css
+++ b/style.css
@@ -207,6 +207,11 @@ header .container #text .meaning ul {
 }
 header .container #text .meaning ul li {
   -webkit-text-fill-color: #050505;
+  font-feature-settings: "clig" off, "liga" off;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 133.333% */
 }
 header .container #text div {
   width: 100%;
