--- a/style.scss
+++ b/style.scss
@@ -208,6 +208,11 @@ header{
                     
                     li{
                         -webkit-text-fill-color: #050505;
+                        font-feature-settings: 'clig' off, 'liga' off;
+                        font-size: 18px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 24px; /* 133.333% */
                     }
                 }
             }
